--- a/store/templates/store/products.html
+++ b/store/templates/store/products.html
@@ -4,13 +4,15 @@
     <title>Products</title>
 </head>
 <body>
-    <h1>Product List</h1>
-
+    <h1>All Products</h1>
+    <ul>
     {% for product in products %}
-        <p>{{ product.name }} - {{ product.price }}</p>
-    {% empty %}
-        <p>No products found</p>
+        <li>{{ product.name }} - ₹{{ product.price }} - {{ product.category }}</li>
     {% endfor %}
+    </ul>
 
+    <!-- Navigation buttons -->
+    <a href="{% url 'home' %}">Home</a> | 
+    <a href="{% url 'categories_list' %}">Categories</a>
 </body>
 </html>
