--- a/store/templates/store/products.html
+++ b/store/templates/store/products.html
@@ -4,6 +4,8 @@
 <html>
 <head>
     <title>Products</title>
+    <link rel="stylesheet" href="{% static 'store/style.css' %}">
+
 </head>
 <body>
     <h1>All Products</h1>
@@ -14,7 +16,12 @@
     </ul>
 
     <!-- Navigation buttons -->
-    <a href="{% url 'home' %}">Home</a> | 
-    <a href="{% url 'categories_list' %}">Categories</a>
+    <a href="{% url 'home' %}">GO Home</a> | 
+    <a href="{% url 'categories' %}">Categories</a>
 </body>
 </html>
+
+
+
+    
+
