--- a/store/templates/store/main_page.html
+++ b/store/templates/store/main_page.html
@@ -1,47 +1,25 @@
 
+ {% load static tailwind_tags %}
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 <head>
-    <title>VZ Store - Home Page</title>
+    <title>
+
+    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% tailwind_css %}
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #000;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 100px;
-        }
-        h1 {
-            font-size: 36px;
-            margin-bottom: 50px;
-        }
-        a.button {
-            display: inline-block;
-            margin: 20px;
-            padding: 20px 40px;
-            font-size: 20px;
-            background-color: #000;
-            color: YELLOW;
-            text-decoration: none;
-            border-radius: 10px;
-        }
-        a.button:hover {
-            background-color: #45a044;
-        }
-    </style>
+    <!-- Your custom CSS -->
+    <link rel="stylesheet" href="{% static 'store/style.css' %}">
+
+
 </head>
 
-<body>
-    <style>
-        body{
-            background: #000;
-            color: #fff;
-        }
-    </style>
-    <!-- Bootstrap JS Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<body class="bg-gray-50 text-black font-serif leading-normal tracking-normal">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Searchbar</a>
@@ -79,20 +57,17 @@
     </div>
   </div>
 </nav>
-    
-    <h1>welcome to home page of this store </h1>
-    <a href="{% url 'categories' %}" class="button">Categories</a>
-    <a href="{% url 'products' %}" class="button">Products</a>
 
-    <!-- Admin Button -->
-    <a href="{% url 'admin:index' %}" class="button"> Go to Admin </a>
-    
- 
+<div class="container ">
+
+    <section class="flex items-center justify-center h-screen">
+        <h1 class="text-5xl">Django + Tailwind = ❤️</h1>
+        <h2><text-5x1>Welcome to my store ❤️ </text-5x1></h2>
+    </section>
+</div>
+
+<!-- Bootstrap JS Bundle (includes Popper) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
-
-{% comment %} ............... {% endcomment %}
-
-
-
-
